# UnityNativeScripting

./: .gitignore  LICENSE.txt  README.md
Assets/: Bindings.cpp  BootScene.unity  Game.cpp  ObjectStore.cs
ProjectSettings/: EditorSettings.asset  GraphicsSettings.asset
Unity/: .gitignore
Unity/Assets/: Bindings.cs  Bindings.h  Bindings.json  BootScript.cs  CMakeLists.txt  NativeScriptConstants.cs  NativeScriptTypes.json
Unity/Assets/CppSource/: CMakeLists.txt  Game.cpp  iOS.cmake
Unity/Assets/CppSource/Game/: Game.h
Unity/Assets/CppSource/NativeScript/: Bindings.cpp  Bindings.h
Unity/Assets/Editor/: GenerateBindings.cs
Unity/Assets/Game/: AbstractBaseBallScript.cs
Unity/Assets/NativeScript/: BindingConstants.cs  Bindings.cpp  Bindings.cs  Bindings.h  Bindings.json  BootScene.unity  BootScript.cs  ObjectStore.cs
Unity/Assets/NativeScript.bundle/Contents/: Info.plist
Unity/Assets/NativeScript.bundle/Contents/MacOS/: NativeScript
Unity/Assets/NativeScript/Editor/: EditorMenus.cs  GenerateBindings.cs
Unity/CppSource/: CMakeLists.txt
Unity/CppSource/Game/: Game.cpp  Game.h
Unity/CppSource/NativeScript/: Bindings.cpp  Bindings.h
Unity/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
